--- a/template/index.html
+++ b/template/index.html
@@ -1,14 +1,15 @@
 {% extends "layout.html" %}
 {% block body %}
+
 <body>
-   
+
     <main>
         <div class="infocontainer">
             <div class="myinfo">
                 <div class="f-size-1">Hello I am </div>
-                <div class="f-size-1">Shyanukant Rathi</div>
-                <div class="f-size-2">CS Enthusiastic</div>
-                <div class="aboutmore">I am a Beginner Developer, Designer and also know about machine learning and data science. And I am learning web3.0 from Alchemy which is an open-source web3.0 community. </div>
+                <div class="f-size-1">{{params.name}}</div>
+                <div class="f-size-2">{{params.tag}}</div>
+                <div class="aboutmore">{{params.profile} </div>
                 <div class="buttons">
                     <a href="http://shyanukant.github.io" target="_blank"><button>My CV</button></a>
                     <a href="/contact"><button>Contact Me</button></a>
@@ -32,19 +33,25 @@
         <hr class="m-auto">
         <h2 class="font-design">PROJECT</h2>
         <div class="myproject">
-            {% for project in projects %}
-            <!-- {% set fname = 'images/' + project.img_file %} -->
-            <div class="p-detail">
-                <a  href="/project/{{project.slug}}"><img class="p-img" src="{{project.img_file}}" alt=""></a>
-                <a href="/project/{{project.slug}}" class="f-design1"><h3 >{{project.title}}</h3></a>
-                <a href="/project/{{project.slug}}" class="f-design2"><p> {{project.content[0:50]|safe}}...
-                </p></a>
+            <div class="pd-container">
+                {% for project in projects %}
+                <!-- {% set fname = 'images/' + project.img_file %} -->
+                <div class="p-detail">
+                    <a href="/project/{{project.slug}}"><img class="p-img" src="{{project.img_file}}" alt=""></a>
+                    <a href="/project/{{project.slug}}" class="f-design1">
+                        <h3>{{project.title}}</h3>
+                    </a>
+                    <a href="/project/{{project.slug}}" class="f-design2">
+                        <p> {{project.content[0:50]|safe}}...
+                        </p>
+                    </a>
+                </div>
+                {% endfor %}
             </div>
-            {% endfor %}
         </div>
     </main>
 
-    
+
 </body>
 
 {% endblock %}
