solve json error

--- a/template/index.html
+++ b/template/index.html
@@ -9,7 +9,7 @@
                 <div class="f-size-1">Hello I am </div>
                 <div class="f-size-1">{{params.name}}</div>
                 <div class="f-size-2">{{params.tag}}</div>
-                <div class="aboutmore">{{params.profile} </div>
+                <div class="aboutmore">{{params.profile}} </div>
                 <div class="buttons">
                     <a href="http://shyanukant.github.io" target="_blank"><button>My CV</button></a>
                     <a href="/contact"><button>Contact Me</button></a>
