--- a/template/index.html
+++ b/template/index.html
@@ -38,13 +38,13 @@
                 <!-- {% set fname = 'images/' + project.img_file %} -->
                 <div class="p-detail">
                     <a href="/project/{{project.slug}}"><img class="p-img" src="{{project.img_file}}" alt=""></a>
-                    <a href="/project/{{project.slug}}" class="f-design1">
+                    <a href="/project/{{project.slug}}" class="f-design1 fcenter">
                         <h3>{{project.title}}</h3>
                     </a>
-                    <a href="/project/{{project.slug}}" class="f-design2">
+                    <!-- <a href="/project/{{project.slug}}" class="f-design2">
                         <p> {{project.content[0:50]|safe}}...
                         </p>
-                    </a>
+                    </a> -->
                 </div>
                 {% endfor %}
             </div>
