--- a/template/index.html
+++ b/template/index.html
@@ -19,16 +19,7 @@
                 <img src="{{url_for('static', filename='images/shyanukant.jpg')}}" alt="shyanukant">
             </div>
         </div>
-        <!-- CERTIFICATES -->
-        <hr class="m-auto">
-        <h2 class="font-design">CERTIFICATES</h2>
-        <div class="myproject">
-            {% for photo in params.certificates %}
-            <div class="ct-box">
-                <img class="ct-img" src="static/images/certificate/{{photo}}" alt="">
-            </div>
-            {% endfor %}
-        </div>
+        
         <!-- PROJECT -->
         <hr class="m-auto">
         <h2 class="font-design">PROJECT</h2>
@@ -48,6 +39,16 @@
                 </div>
                 {% endfor %}
             </div>
+        </div>
+        <!-- CERTIFICATES -->
+        <hr class="m-auto">
+        <h2 class="font-design">CERTIFICATES</h2>
+        <div class="myproject">
+            {% for photo in params.certificates %}
+            <div class="ct-box">
+                <a href="static/images/certificate/{{photo}}" target="_blank"><img class="ct-img" src="static/images/certificate/{{photo}}" alt=""></a>
+            </div>
+            {% endfor %}
         </div>
     </main>
 
