--- a/template/index.html
+++ b/template/index.html
@@ -42,7 +42,7 @@
         </div>
         <!-- CERTIFICATES -->
         <hr class="m-auto">
-        <h2 class="font-design">CERTIFICATES</h2>
+        <h2 class="font-design">CERTIFICATIONS</h2>
         <div class="myproject">
             {% for photo in params.certificates %}
             <div class="ct-box">
