--- a/template/index.html
+++ b/template/index.html
@@ -16,7 +16,7 @@
                 </div>
             </div>
             <div class="mypic">
-                <img src="{{url_for('static', filename='images/shyanukant.jpg')}}" alt="shyanukant">
+                <img src="{{url_for('static', filename='images/pic.png')}}" alt="Profile Picture">
             </div>
         </div>
         
